# axial

./: .gitignore  CLAUDE.md  PRODUCT.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: fixer.md  implementer.md  reviewer.md  spec-author.md  test-author.md  triage.md
.claude/hooks/: block-merge.ps1  commit-gate.ps1  format.ps1  path-guard.ps1  spec-freeze.ps1
.github/workflows/: ci.yml
config/: canary-manifest.toml  pipeline.yaml  probe-138-content-filter.toml
config/lenses/: political-economy.yaml  state-formation.yaml
docs/: DECISIONS.md  corpus-bibliography.md
docs/academic/: README.md  about-axial.md  corpus-bibliography.md  outreach-letter.md  request-gold-labels.md
docs/eval/: 01-answer-quality.md  02-hybrid-tagging-distillation.md  03-agentic-trajectory.md  04-frozen-tag-distribution.md  README.md
docs/exploration/: extract-text-normalization.md  hybrid-tagging-classifier.md
docs/sim-academic/: README.md  merge_gold_labels.py
evals/corpus_pin/: sim-2026-07-23.json
plans/analysis-foundation/: 01-brief-intake-and-id.md  02-corpus-pin-manifest.md  03-dev-brief-backlog.md  README.md
plans/analysis-record/: 01-analysis-record-and-brief-run.md  02-markdown-answer-rendering.md  README.md
plans/analysis-synthesis/: 01-evidence-assembly-and-examine.md  02-synthesis-claim-graph.md  README.md
plans/analysis-validators/: 01-attribution-validator.md  02-counter-position-validator.md  03-coverage-and-confidence.md  README.md
plans/artifacts/: 01-artifact-classify.md  02-artifact-pool-write.md  README.md
plans/book-metadata-open-library/: 01-identifier-capture-validate.md  01-identifier-lookup-and-merge.md  02-bibliographic-lookup-cache.md  03-source-meta-merge-guard.md  FINDINGS.md  README.md
plans/brief-interrogation/: 01-interrogation-pass-and-disposition.md  README.md
plans/charter/: CONSTITUTION.draft.md
plans/chunk-redesign/: 01-chunk-stage.md  02-embedding-cache.md  03-chunk-examine.md  04-pipeline-rewire.md  05-gold-eval-migration.md  06-recursive-mechanism.md  README.md
plans/drive-connector/: 01-skeleton-list-download-stream.md  02-incremental-fetch-state.md  03-english-only-gate.md  README.md
plans/eval/: 01-score-gold-set.md
plans/extract-normalization/: 01-whitespace-glyph.md
plans/gold/: 01-gold-sample.md  02-label-sheet.md  README.md
plans/intake-metadata/: 01-holdings-model-adjudicated.md  02-source-metadata-record.md  03-envelope-metadata-cleanup.md  README.md
plans/minimal-ingestion/: 01-intake.md  02-structural-extraction.md  03-extraction-fallback.md  04-structural-envelope.md  05-argumentative-chunking.md  06-vault-write.md  README.md
plans/multiuser-analyst-service/: README.md
plans/phase-a-completion/: README.md  STAGE-4-EXECUTION.md  STAGE-4-RUNBOOK.md  TRACKER.md
plans/polity-normalization/: 01-canonical-map.md
plans/reconcile/: 01-orphan-gc.md  README.md
plans/retrieval-loop/: 01-tool-loop-skeleton.md  02-planning-anchor-and-requery.md  README.md
plans/run-logging/: 01-run-logging-seam.md  02-wire-remaining-passes.md  README.md
secrets/: secrets.example.toml
specs/: CHARTER.md  PHASE-B.md  PRODUCT.md
tests/: conftest.py  test_artifacts.py  test_artifacts_resume.py  test_chunk.py  test_chunk_backmatter_filter.py  test_chunk_examine.py  test_chunk_input_guard.py  test_chunk_invalid_escapes.py  test_chunk_recursive.py  test_chunk_resilience.py  test_cli_skeleton.py  test_drive_incremental.py  test_drive_ingest.py  test_drive_language_gate.py  test_envelope.py  test_eval.py  test_extract.py  test_extract_fallback.py  test_gold_deliver.py  test_gold_frame_guard.py  test_gold_sample.py  test_gold_sheet.py  test_ingest.py  test_intake.py  test_llm_config.py  test_llm_wallclock_timeout.py  test_pipeline_ready.py  test_pipeline_rewire.py  test_reconcile.py  test_run.py  test_run_corpus.py  test_run_ledger_flag.py  test_run_resume.py  test_runlog.py  test_runlog_passes.py  test_schema_show.py  test_schema_validate.py  test_source_router.py  test_tag.py  test_tag_artifacts_input_guard.py  (+15 more)
(+627 files in other folders)
