[project]
name = "axial"
version = "0.1.0"
description = "Axial: corpus ingestion pipeline turning academic sources into a tagged Obsidian knowledge graph. Built by a one-person agentic engineering org."
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
axial = "axial.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axial"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

# tests/ holds only outer acceptance contracts (test-author, locked once red);
# inner unit tests are co-located under src/ (implementer's domain) - DEC-20.
[tool.pytest.ini_options]
testpaths = ["tests", "src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
