[project]
name = "axial"
version = "0.1.0"
description = "Axial: corpus ingestion pipeline turning academic sources into a tagged Obsidian knowledge graph. Built by a one-person agentic engineering org."
requires-python = ">=3.13"
dependencies = [
    "docling>=2.110.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.30.0",
    "httpx>=0.28.1",
    "langdetect>=1.0.9",
    "openpyxl>=3.1.5",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
    "unstructured-inference>=1.6.13",
    "unstructured[pdf]>=0.24.0",
]

[project.scripts]
axial = "axial.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axial"]

[dependency-groups]
dev = [
    "filelock>=3",
    "pytest>=8",
    "pytest-xdist>=3",
    "ruff>=0.6",
]

# tests/ holds only outer acceptance contracts (test-author, locked once red);
# inner unit tests are co-located under src/ (implementer's domain) - DEC-20.
[tool.pytest.ini_options]
testpaths = ["tests", "src"]
markers = [
    "slow: exercises the real docling conversion pipeline (model load, no network once cached)",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
